# controller_timing_check

./: .gitignore  CMakeLists.txt  README  README.md  env.sh
include/: Controller.hpp  acados_solver_controller.h  controller_constraints.h  controller_cost.h  controller_model.h
matlab/: Controller_mex.cpp  main.m  make_Controller_mex.m
src/: acados_solver_controller.c  controller_dyn_disc_phi_fun.c  controller_dyn_disc_phi_fun_jac.c  controller_dyn_disc_phi_fun_jac_hess.c  main.cpp
